infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: ticketing.dev
    http:
      paths:
      - pathType: Prefix
        path: "/api/users/?(.*)"
        backend:
          service:
            name: ticketing-auth-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/tickets/?(.*)"
        backend:
          service:
            name: ticketing-tickets-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/orders/?(.*)"
        backend:
          service:
            name: ticketing-orders-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/payments/?(.*)"
        backend:
          service:
            name: ticketing-payments-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/?(.*)"
        backend:
          service:
            name: ticketing-client-srv
            port: 
              number: 3000
